# diplomski-aplikacija

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
client/: .gitignore  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
client/src/components/: icons.tsx
client/src/hooks/: useDocument.ts  useDocumentParsedBlocks.ts  useDocuments.ts  useUploadDocument.ts
client/src/lib/: api.ts  auth.ts  bloom.ts  citations.ts  time.ts  ui-types.ts
client/src/routes/: __root.tsx  _app.account.tsx  _app.quizzes.$quizId.results.tsx  _app.quizzes.$quizId.take.tsx  _app.subjects.$subjectId.chat.tsx  _app.subjects.$subjectId.conversations.$conversationId.tsx  _app.subjects.$subjectId.documents.$docId.tsx  _app.subjects.$subjectId.documents.index.tsx  _app.subjects.$subjectId.index.tsx  _app.subjects.$subjectId.quizzes.index.tsx  _app.subjects.index.tsx  _app.tsx  _auth.login.tsx  _auth.register.tsx  _auth.tsx  index.tsx
db/init/: 00-extensions.sql
node-agent/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.lint.json
node-agent/src/: server.ts
python-parser/: .gitignore  Dockerfile  pyproject.toml
python-parser/src/: auth.py  config.py  image_uploader.py  main.py  marker_runner.py  parse_router.py  s3_client.py  schemas.py
rails-api/: Dockerfile  Gemfile
rails-api/config/: application.rb  database.yml  routes.rb  storage.yml
rails-api/db/: structure.sql
(+160 files in other folders)
