[project]
name = "python-parser"
version = "0.1.0"
description = "FastAPI document parser (Marker)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "boto3>=1.35",
  "python-dotenv>=1.0",
  "pydantic>=2.9",
  "marker-pdf>=1.2",       # PDF parser (default)
  "python-magic>=0.4.27",  # mime sniffing on downloaded bytes
  "pyjwt>=2.9",            # Rails-minted JWT verification
  "httpx>=0.27",           # download via presigned URL
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
